setatributte ondragstart=return false to body

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body>
+<body ondragstart="return false">
     <header id="container">
       <h1>Equipe Criativa</h1>
 
